--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
 
  "Account": {
-     "Username": "Ardi01",
-     "Password": "f123dho"
+     "Username": "xxx",
+     "Password": "xxx"
      },
  "Target Profit": "454",
  "Target Win": "35000",
